--- a/CMDb/Base.lproj/Search.storyboard
+++ b/CMDb/Base.lproj/Search.storyboard
@@ -31,29 +31,40 @@
                                                 <constraint firstAttribute="width" constant="92" id="vOH-HF-9lY"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movie Title &amp; Year" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ktU-8t-bDo">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movie Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ktU-8t-bDo">
                                             <rect key="frame" x="120" y="8" width="235" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Genres" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z13-a8-MiJ">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Year" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z13-a8-MiJ">
                                             <rect key="frame" x="120" y="37" width="235" height="17"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Overview" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bhr-jX-QHY">
+                                            <rect key="frame" x="120" y="62" width="235" height="18"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="bottom" secondItem="mJ7-5t-0gP" secondAttribute="bottom" constant="7.5" id="6sQ-Pz-KYW"/>
+                                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="mJ7-5t-0gP" secondAttribute="bottom" constant="8" id="8wM-PL-yh8"/>
                                         <constraint firstItem="ktU-8t-bDo" firstAttribute="leading" secondItem="mJ7-5t-0gP" secondAttribute="trailing" constant="8" id="GCs-MG-FgV"/>
+                                        <constraint firstItem="bhr-jX-QHY" firstAttribute="top" secondItem="z13-a8-MiJ" secondAttribute="bottom" constant="8" id="H52-5E-NvD"/>
                                         <constraint firstItem="mJ7-5t-0gP" firstAttribute="leading" secondItem="F66-Cu-k04" secondAttribute="leading" constant="20" symbolic="YES" id="IRK-Pa-8r7"/>
                                         <constraint firstItem="z13-a8-MiJ" firstAttribute="bottom" relation="lessThanOrEqual" secondItem="mJ7-5t-0gP" secondAttribute="bottom" id="RwJ-rL-Wsb"/>
+                                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="bhr-jX-QHY" secondAttribute="bottom" constant="8" id="UAL-t4-ZsH"/>
                                         <constraint firstItem="mJ7-5t-0gP" firstAttribute="top" secondItem="F66-Cu-k04" secondAttribute="top" constant="8" id="W5I-bd-DJR"/>
+                                        <constraint firstItem="bhr-jX-QHY" firstAttribute="top" secondItem="z13-a8-MiJ" secondAttribute="bottom" constant="8" id="Zw0-Gi-NCD"/>
                                         <constraint firstItem="z13-a8-MiJ" firstAttribute="top" secondItem="ktU-8t-bDo" secondAttribute="bottom" constant="8" id="bNA-27-YbY"/>
+                                        <constraint firstItem="bhr-jX-QHY" firstAttribute="trailing" secondItem="z13-a8-MiJ" secondAttribute="trailing" id="dTh-uw-mcp"/>
                                         <constraint firstItem="z13-a8-MiJ" firstAttribute="leading" secondItem="ktU-8t-bDo" secondAttribute="leading" id="iz8-nd-ICe"/>
                                         <constraint firstAttribute="trailing" secondItem="ktU-8t-bDo" secondAttribute="trailing" constant="20" symbolic="YES" id="jgw-NO-suk"/>
                                         <constraint firstItem="ktU-8t-bDo" firstAttribute="top" secondItem="mJ7-5t-0gP" secondAttribute="top" id="m1T-Ds-15Q"/>
+                                        <constraint firstItem="bhr-jX-QHY" firstAttribute="leading" secondItem="z13-a8-MiJ" secondAttribute="leading" id="oKt-mv-ksf"/>
                                         <constraint firstItem="z13-a8-MiJ" firstAttribute="trailing" secondItem="ktU-8t-bDo" secondAttribute="trailing" id="rjT-lz-On4"/>
                                     </constraints>
                                 </tableViewCellContentView>
