--- a/CMDb/Base.lproj/Search.storyboard
+++ b/CMDb/Base.lproj/Search.storyboard
@@ -12,12 +12,12 @@
         <scene sceneID="TbQ-xU-sae">
             <objects>
                 <tableViewController storyboardIdentifier="SearchTVC" id="Ksu-eY-Xy3" customClass="SearchTVC" customModule="CMDb" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="pxH-uo-IJZ">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="151" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="pxH-uo-IJZ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieTableCell" rowHeight="151" id="qQ5-UN-gvj" customClass="MovieTableCell" customModule="CMDb" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieTableCell" id="qQ5-UN-gvj" customClass="MovieTableCell" customModule="CMDb" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="151"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qQ5-UN-gvj" id="F66-Cu-k04">
@@ -25,41 +25,38 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mJ7-5t-0gP">
-                                            <rect key="frame" x="20" y="8" width="92" height="135"/>
+                                            <rect key="frame" x="15" y="8" width="92" height="135"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="135" id="6pO-KX-3qC"/>
                                                 <constraint firstAttribute="width" constant="92" id="vOH-HF-9lY"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ktU-8t-bDo">
-                                            <rect key="frame" x="120" y="8" width="235" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.84999999999999998" translatesAutoresizingMaskIntoConstraints="NO" id="ktU-8t-bDo">
+                                            <rect key="frame" x="115" y="8" width="240" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Year" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z13-a8-MiJ">
-                                            <rect key="frame" x="120" y="37" width="235" height="17"/>
+                                            <rect key="frame" x="115" y="31" width="240" height="17"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Overview" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bhr-jX-QHY">
-                                            <rect key="frame" x="120" y="62" width="235" height="18"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Overview" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bhr-jX-QHY">
+                                            <rect key="frame" x="115" y="56" width="240" height="18"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="mJ7-5t-0gP" secondAttribute="bottom" constant="8" id="8wM-PL-yh8"/>
-                                        <constraint firstItem="ktU-8t-bDo" firstAttribute="leading" secondItem="mJ7-5t-0gP" secondAttribute="trailing" constant="8" id="GCs-MG-FgV"/>
-                                        <constraint firstItem="bhr-jX-QHY" firstAttribute="top" secondItem="z13-a8-MiJ" secondAttribute="bottom" constant="8" id="H52-5E-NvD"/>
-                                        <constraint firstItem="mJ7-5t-0gP" firstAttribute="leading" secondItem="F66-Cu-k04" secondAttribute="leading" constant="20" symbolic="YES" id="IRK-Pa-8r7"/>
-                                        <constraint firstItem="z13-a8-MiJ" firstAttribute="bottom" relation="lessThanOrEqual" secondItem="mJ7-5t-0gP" secondAttribute="bottom" id="RwJ-rL-Wsb"/>
+                                        <constraint firstItem="ktU-8t-bDo" firstAttribute="leading" secondItem="mJ7-5t-0gP" secondAttribute="trailing" constant="8" symbolic="YES" id="GCs-MG-FgV"/>
+                                        <constraint firstItem="bhr-jX-QHY" firstAttribute="top" secondItem="z13-a8-MiJ" secondAttribute="bottom" constant="8" symbolic="YES" id="H52-5E-NvD"/>
+                                        <constraint firstItem="mJ7-5t-0gP" firstAttribute="leading" secondItem="F66-Cu-k04" secondAttribute="leading" constant="15" id="IRK-Pa-8r7"/>
                                         <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="bhr-jX-QHY" secondAttribute="bottom" constant="8" id="UAL-t4-ZsH"/>
                                         <constraint firstItem="mJ7-5t-0gP" firstAttribute="top" secondItem="F66-Cu-k04" secondAttribute="top" constant="8" id="W5I-bd-DJR"/>
-                                        <constraint firstItem="bhr-jX-QHY" firstAttribute="top" secondItem="z13-a8-MiJ" secondAttribute="bottom" constant="8" id="Zw0-Gi-NCD"/>
-                                        <constraint firstItem="z13-a8-MiJ" firstAttribute="top" secondItem="ktU-8t-bDo" secondAttribute="bottom" constant="8" id="bNA-27-YbY"/>
+                                        <constraint firstItem="z13-a8-MiJ" firstAttribute="top" secondItem="ktU-8t-bDo" secondAttribute="bottom" constant="2" id="bNA-27-YbY"/>
                                         <constraint firstItem="bhr-jX-QHY" firstAttribute="trailing" secondItem="z13-a8-MiJ" secondAttribute="trailing" id="dTh-uw-mcp"/>
                                         <constraint firstItem="z13-a8-MiJ" firstAttribute="leading" secondItem="ktU-8t-bDo" secondAttribute="leading" id="iz8-nd-ICe"/>
                                         <constraint firstAttribute="trailing" secondItem="ktU-8t-bDo" secondAttribute="trailing" constant="20" symbolic="YES" id="jgw-NO-suk"/>
@@ -76,20 +73,20 @@
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LoadingTableCell" id="JRZ-AY-hFZ">
-                                <rect key="frame" x="0.0" y="179" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="179" width="375" height="151"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="JRZ-AY-hFZ" id="mtd-GH-MnR">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="150.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O9V-lj-dlh">
-                                            <rect key="frame" x="136" y="0.0" width="103" height="43.5"/>
+                                            <rect key="frame" x="136" y="0.0" width="103" height="150.5"/>
                                             <subviews>
-                                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="GJq-ba-hfg">
-                                                    <rect key="frame" x="0.0" y="0.0" width="20" height="43.5"/>
+                                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="GJq-ba-hfg">
+                                                    <rect key="frame" x="0.0" y="0.0" width="20" height="150.5"/>
                                                 </activityIndicatorView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bEb-Gp-ovd">
-                                                    <rect key="frame" x="28" y="0.0" width="75" height="43.5"/>
+                                                    <rect key="frame" x="28" y="0.0" width="75" height="150.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
