--- a/CMDb/Base.lproj/Search.storyboard
+++ b/CMDb/Base.lproj/Search.storyboard
@@ -37,14 +37,14 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Year" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z13-a8-MiJ">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Year" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z13-a8-MiJ">
                                             <rect key="frame" x="115" y="31" width="240" height="17"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Overview" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bhr-jX-QHY">
-                                            <rect key="frame" x="115" y="56" width="240" height="18"/>
+                                            <rect key="frame" x="115" y="50" width="240" height="18"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -52,7 +52,7 @@
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="ktU-8t-bDo" firstAttribute="leading" secondItem="mJ7-5t-0gP" secondAttribute="trailing" constant="8" symbolic="YES" id="GCs-MG-FgV"/>
-                                        <constraint firstItem="bhr-jX-QHY" firstAttribute="top" secondItem="z13-a8-MiJ" secondAttribute="bottom" constant="8" symbolic="YES" id="H52-5E-NvD"/>
+                                        <constraint firstItem="bhr-jX-QHY" firstAttribute="top" secondItem="z13-a8-MiJ" secondAttribute="bottom" constant="2" id="H52-5E-NvD"/>
                                         <constraint firstItem="mJ7-5t-0gP" firstAttribute="leading" secondItem="F66-Cu-k04" secondAttribute="leading" constant="15" id="IRK-Pa-8r7"/>
                                         <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="bhr-jX-QHY" secondAttribute="bottom" constant="8" id="UAL-t4-ZsH"/>
                                         <constraint firstItem="mJ7-5t-0gP" firstAttribute="top" secondItem="F66-Cu-k04" secondAttribute="top" constant="8" id="W5I-bd-DJR"/>
@@ -72,21 +72,21 @@
                                     <outlet property="yearLabel" destination="z13-a8-MiJ" id="h4e-lp-foK"/>
                                 </connections>
                             </tableViewCell>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LoadingTableCell" id="JRZ-AY-hFZ">
-                                <rect key="frame" x="0.0" y="179" width="375" height="151"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LoadingTableCell" rowHeight="54" id="JRZ-AY-hFZ">
+                                <rect key="frame" x="0.0" y="179" width="375" height="54"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="JRZ-AY-hFZ" id="mtd-GH-MnR">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="150.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="53.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O9V-lj-dlh">
-                                            <rect key="frame" x="136" y="0.0" width="103" height="150.5"/>
+                                            <rect key="frame" x="136" y="0.0" width="103" height="53.5"/>
                                             <subviews>
                                                 <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="GJq-ba-hfg">
-                                                    <rect key="frame" x="0.0" y="0.0" width="20" height="150.5"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="20" height="53.5"/>
                                                 </activityIndicatorView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bEb-Gp-ovd">
-                                                    <rect key="frame" x="28" y="0.0" width="75" height="150.5"/>
+                                                    <rect key="frame" x="28" y="0.0" width="75" height="53.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
